--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 asgiref==3.4.1
 Django==3.2.7
 django-allauth==0.41.0
+django-countries==7.2.1
+django-crispy-forms==1.12.0
+django-profiles==0.2
 oauthlib==3.1.1
 Pillow==8.3.2
 python3-openid==3.2.0
 pytz==2021.1
 requests-oauthlib==1.3.0
 sqlparse==0.4.1
+stripe==2.60.0
